fix layout on safari attempt 2

--- a/components/slides/arealize/WayForward/WayForward.module.scss
+++ b/components/slides/arealize/WayForward/WayForward.module.scss
@@ -7,14 +7,14 @@
     .container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr 2fr 2fr 1fr;
         gap: 2rem;
         width: 1000px;
         height: fit-content;
 
         .video {
             grid-column: 1 / 2;
-            grid-row: 1 / 3;
+            grid-row: 2 / 4;
             object-fit: cover;
             height: 100%;
             max-width: 100%;
@@ -27,13 +27,13 @@
         }
 
         .description {
-            grid-column: 2/3;
-            grid-row: 1 / 2;
+            grid-column: 2;
+            grid-row: 2;
         }
 
         & > span:last-of-type {
-            grid-column: 2/3;
-            grid-row: 2 / 3;
+            grid-column: 2;
+            grid-row: 3;
         }
     }
 }
